Update Docker configuration to use entrypoint script for service startup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,7 @@ services:
       - .:/app
     ports:
       - "3000:3000"
-    command: tail -f /dev/null
-
+    command: ./entrypoint.sh
   db:
     image: postgres:17
     environment:
